RESOLVED FIXED222649
REGRESSION(r273644 ): [GStreamer] new webrtc failures
https://bugs.webkit.org/show_bug.cgi?id=222649
Summary REGRESSION(r273644 ): [GStreamer] new webrtc failures
Philippe Normand
Reported 2021-03-03 04:46:21 PST
[1/3] webrtc/direction-change.html failed unexpectedly (WebKitWebProcess crashed [pid=137]) [2/3] webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html failed unexpectedly (WebKitWebProcess crashed [pid=383]) [3/3] webrtc/video-setDirection.html failed unexpectedly (WebKitWebProcess crashed [pid=607]) (WebKitWebProcess:383): GStreamer-CRITICAL **: 04:44:31.692: Padname audio_src is not unique in element source, not adding
Attachments
Patch (2.91 KB, patch)
2021-03-03 04:55 PST, Philippe Normand
no flags
Patch (3.23 KB, patch)
2021-03-03 09:38 PST, Philippe Normand
no flags
Patch (5.62 KB, patch)
2021-03-03 10:25 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-03-03 04:55:18 PST
Philippe Normand
Comment 2 2021-03-03 09:38:31 PST
Philippe Normand
Comment 3 2021-03-03 10:25:53 PST
EWS
Comment 4 2021-03-04 05:18:20 PST
Committed r273884: <https://commits.webkit.org/r273884> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422109 [details].
Radar WebKit Bug Importer
Comment 5 2021-03-04 05:19:17 PST
Note You need to log in before you can comment on or make changes to this bug.