REGRESSION(r273644 ): [GStreamer] new webrtc failures https://bugs.webkit.org/show_bug.cgi?id=222649

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-04
Reviewed by Xabier Rodriguez-Calvar.

Since the mediastreamsrc element maintains static source pads, it now needs to remove pads
left unused resulting from a track removal.

* platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcRemovePad):
(webkitMediaStreamSrcRemoveTrackByType):

Canonical link: https://commits.webkit.org/234845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273884 268f45cc-cd09-0410-ab3c-d52691b4dbfc